--- a/styles/style.css
+++ b/styles/style.css
@@ -1,26 +1,89 @@
+/* Basic CSS for the page */
+
+body {
+  background-color: #2c99dc;
+}
+
+.title {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  float: none;
+  color: #e5eee9;
+  width:50%;
+  font-size:1.5em;
+  text-align: center;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  text-shadow: 2px 2px #232a32;
+}
+
+
+/* Screen overlay to prevent clicking when animation is occuring */
+
+#screenCover {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 999;
+}
+
+
+/* Styling for players and showing whose turn it is */
+
+.players {
+  margin-top:-20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom:50px;
+  display: block;
+  float: none;
+  width:50%;
+  color:white;
+  font-size:1em;
+  font-weight: 900;
+  text-shadow: 1px 1px #232a32;
+  font-family: "Lucida Bright", Georgia, serif;
+}
+
+.players #playerone {
+  float:left;
+  margin-left:25px;
+  margin-bottom:20px;
+}
+
+.players #playertwo {
+  float:right;
+  margin-right:25px;
+  margin-bottom:20px;
+}
+
+#horizontalLine {
+  width: 50%;
+  border-top: 3px solid #0066FF;
+  position:relative;
+  bottom:-20px;
+}
+
+/* Basic styling for game table layout */
+
 #gameTable, #gameTable tr, #gameTable td {
 	border: 1px solid #C0C0C0;
-  background-color:yellow;
+  background-color:#ffff4c;
 }
 
 #gameTable {
-  margin-left:200px;
- }
+  border: 2px solid #375f95;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 10px 10px 5px #363631;
+  border-radius: 9px;
+  -moz-border-radius: 9px;
+}
 
- #test {
-  z-index:3;
-  height:100px;
-  width:100px;
-  background-color:blue;
-  position:absolute;
-  left:500px;
-  top:100px;
- }
 
-/*#gameTable {
-	width:500px;
-  height:500px;
-}*/
+/* Connect Four Pieces and Related Animations for Dropping a Piece */
 
 .circle {
   width: 50px;
